Edited title to be bold

--- a/latex-report/main.tex
+++ b/latex-report/main.tex
@@ -2,7 +2,7 @@
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 
-\title{Computer Science Project, 2020-'21}
+\title{\textbf{Computer Science Project, 2020-'21}}
 \author{
     Anand Krishna\\
     \And
