LaTeX done till Hardware/Software

--- a/latex-report/main.tex
+++ b/latex-report/main.tex
@@ -49,12 +49,14 @@ x % add only one name here
   I would also like to express my special gratitude and thanks to my classmates in developing the project and to the people who have willingly 
   helped me out with their abilities.
   \end{large}
- 
-  \maketitle
+  
+  
+  \maketitle    % table of contents page
   \begin{large}
   \newpage
   \tableofcontents
   \end{large}
+  
   
   \newpage
   \section{Introduction}
@@ -152,8 +154,29 @@ x % add only one name here
   
   \newpage
   \section{Hardware and Software}
-   Add stuff here
-  
+    \subsection{Hardware}
+    Lenovo Ideapad \newline
+    \emph{Intel Core i5, 4GB RAM}
+    
+    \subsection{Software}
+    \begin{enumerate}
+        \item \textbf{Git SCM} \newline
+        Git is a distributed version-control system for tracking changes in any set of files, originally designed for coordinating work among programmers cooperating on source code during software development. Its goals include speed, data integrity, and support for distributed, non-linear workflows (thousands of parallel branches running on different systems).
+        \item \textbf{GitHub} \newline
+        GitHub is a provider of Internet hosting for software development and version control using Git. It offers the distributed version control and source code management (SCM) functionality of Git, plus its own features. It provides access control and several collaboration features such as bug tracking, feature requests, task management, continuous integration and wikis for every project.
+        \item \textbf{Google Cloud Platform} \newline
+        Google Cloud Platform (GCP), offered by Google, is a suite of cloud computing services that runs on the same infrastructure that Google uses internally for its end-user products, such as Google Search, Gmail, file storage, and YouTube.
+        \item \textbf{Gunicorn} \newline
+        "Green Unicorn" is a Python Web Server Gateway Interface (WSGI) HTTP server. It is a pre-fork worker model, ported from Ruby's Unicorn project. The Gunicorn server is broadly compatible with a number of web frameworks, simply implemented, light on server resources and fairly fast.
+        \item \textbf{Visual Studio Code} \newline
+        It is a free source-code editor made by Microsoft for Windows, Linux and macOS. Features include support for debugging, syntax highlighting, intelligent code completion, snippets, code refactoring, and embedded Git.
+        \item \textbf{PyCharm Community Edition} \newline
+        PyCharm is an integrated development environment (IDE) used in computer programming, specifically for the Python language. It is developed by the Czech company JetBrains.
+        \item \textbf{Adobe Photoshop} \newline
+        Adobe Photoshop is a raster graphics editor developed and published by Adobe Inc. for Windows and macOS.
+    \end{enumerate}
+    
+    
   \newpage
   \section{About the Project}
   About the project
