LaTeX done till About Project

--- a/latex-report/main.tex
+++ b/latex-report/main.tex
@@ -179,7 +179,12 @@ x % add only one name here
     
   \newpage
   \section{About the Project}
-  About the project
+  The aim of the project, Sudoku Webapp, is to provide an aesthetically rich interface for sudoku enthusiasts to enjoy sudoku puzzles.\newline
+
+  A website with 3 webpages: home page, sudoku page and leaderboard page, is the frontend of the project with which the user interacts. The webpages are made using Django, HTML, CSS, JavaScript and a CSS framework called Tailwind. A MySQL database is the primary data store, and is used to store the leaderboard data, and the sudoku game boards that are served on the site.\newline
+
+  A personal aim with this project was to see how much we, as a team, could push ourselves to make a good, functional service. It challenged our creativity, programming skills and our ability to work and co-operate as a team. This project was a great learning experience.
+
   
   \newpage
   \section{Source Code}
