LaTeX done till bibliography

--- a/latex-report/main.tex
+++ b/latex-report/main.tex
@@ -172,6 +172,8 @@ x % add only one name here
         It is a free source-code editor made by Microsoft for Windows, Linux and macOS. Features include support for debugging, syntax highlighting, intelligent code completion, snippets, code refactoring, and embedded Git.
         \item \textbf{PyCharm Community Edition} \newline
         PyCharm is an integrated development environment (IDE) used in computer programming, specifically for the Python language. It is developed by the Czech company JetBrains.
+        \item \textbf{\LaTeX} \newline
+        This project report was made using \LaTeX. \LaTeX is a high-quality typesetting system; it includes features designed for the production of technical and scientific documentation. \LaTeX is the de facto standard for the communication and publication of scientific documents.
         \item \textbf{Adobe Photoshop} \newline
         Adobe Photoshop is a raster graphics editor developed and published by Adobe Inc. for Windows and macOS.
     \end{enumerate}
@@ -188,10 +190,45 @@ x % add only one name here
   
   \newpage
   \section{Source Code}
-  Add a code overview here.
+    \subsection{Frontend}
+    Frontend, also referred to as the \emph{"client-side"}, is the part of the website that you can see and interact with directly.
+    
+    \subsection{Backend}
+    Backend, also referred to as the \emph{"server-side"}, is responsible for facilitating communication between the presentation layer and the data layer.
+    
   
   \newpage
-  \section{Bibliography}
-  Add final output result here.
+  \addcontentsline{toc}{section}{References}
+  \begin{thebibliography}{7}
+  \bibitem{python}
+  Python 3. \textit{Interpreted, high-level, general-purpose programming language.}
+  \\\texttt{https://docs.python.org/3/}
+  
+  \bibitem{django}
+  Django. \textit{The Web Framework for perfectionists with a deadline}
+  \\\texttt{https://docs.djangoproject.com/en/3.1/}
+  
+  \bibitem{tailwind}
+  TailwindCSS. \textit{A utility-first CSS framework packed with classes.}
+  \\\texttt{https://tailwindcss.com/docs}
+  
+  \bibitem{mysql}
+  MySQL Database. \textit{Fast relational database.}
+  \\\texttt{https://dev.mysql.com/doc/}
+  
+  \bibitem{wikipedia}
+  Wikipedia. \textit{The free online encyclopedia.}
+  \\\texttt{https://www.wikipedia.com}
+  
+  \bibitem{stackoverflow}
+  Stackoverflow. \textit{Where developers learn, share and build.}
+  \\\texttt{https://stackoverflow.com/}
+  
+  \bibitem{latex}
+  \LaTeX. \textit{High quality type-setting system.}
+  \\\texttt{https://www.latex-project.org/help/documentation/}
+  
+  \end{thebibliography}
+  
   
 \end{document}
