add changed latex and pdf files

--- a/latex-report/main.tex
+++ b/latex-report/main.tex
@@ -66,7 +66,7 @@ x % add only one name here
   \end{titlepage}
 
   \newpage
-  \includepdf{cert}
+  \includepdf{Cert}
   
   \newpage
   \maketitle
@@ -103,10 +103,10 @@ x % add only one name here
   
   \subsection{Features of Python}
     \subsubsection{Easy to code:}
-    Python is a high-level programming language. Python is very easy to learn as compared to other languages like C, C#, JavaScript, Java, etc. It is very easy to code in python language and anybody can learn python basics in a few hours or days. It is also a developer-friendly language.
+    Python is a high-level programming language. Python is very easy to learn as compared to other languages like C, JavaScript, Java, etc. It is very easy to code in python language and anybody can learn python basics in a few hours or days. It is also a developer-friendly language.
     
     \subsubsection{Free and Open Source:}
-    Since it is open-source, this means that source code is also available to the public. So you can download it as, use it as well as share it.
+    Since it is open-source, this means that source code is also available to the public. So you can download it, use it as well as share it.
     
     \subsubsection{Object-Oriented Language:}
     One of the key features of Python is Object-Oriented Programming. Python supports object-oriented language and concepts of classes, objects, encapsulation, etc.
@@ -120,7 +120,7 @@ x % add only one name here
 
   The purpose of feasibility study is not to solve the problem, but to determine whether the problem is worth solving. By making analysis this way it would be possible to make a report of identified area of problem. By making a detailed analysis in this area a detailed document or report is prepared in this phase which has details like project plan or schedule of the project, the cost estimated for developing and executing the system, target dates for each phase of delivery of system developed and so on. This phase is the base of software development process since further steps taken in software development life cycle would be based on the analysis made on this phase and so careful analysis has to be made in this phase.
   
-  \subsection{TELOS}
+  \subsection*{TELOS}
   
     The feasibility study concentrates on the following area (TELOS):
     \begin{itemize}
@@ -146,7 +146,7 @@ x % add only one name here
     \subsubsection{Schedule Feasibility}
     A project will fail if it takes too long to be completed before it is useful. Typically this means estimating how long the system will take to develop, and if it can be completed in a given time period using some methods like payback period. Schedule feasibility is a measure of how reasonable the project timetable is. Given our technical expertise, are the project deadlines reasonable?
     
-  \subsection{Advantages of Feasibility Study}
+  \subsection*{Advantages of Feasibility Study}
     \begin{itemize}
       \item As the initial step of software development life cycle, feasibility study has all the analysis part in it, which helps in analyzing the system requirements completely. 
       \item Helps in identifying the risk factors involved in developing and deploying the system.
@@ -154,7 +154,7 @@ x % add only one name here
       \item It is a report which could be used by the senior or top persons in the organization. This is because, based on the report the organization decides about cost estimation, funding and other important decisions which is very essential for an organization to run profitably and for the system to run stable.
     \end{itemize}
     
-  \subsection{Software Development Life Cycle}
+  \subsection*{Software Development Life Cycle}
   The Systems Development Life Cycle (SDLC) is a conceptual model used in project management that describes the stages involved in an information system development project from an initial feasibility study through maintenance of the completed application. \newline
   \begin{wrapfigure}{r}{0.25\textwidth}
     \includegraphics[width=0.25\textwidth]{feasibility-study}
@@ -188,27 +188,27 @@ x % add only one name here
   \newpage
   \section{Hardware and Software}
     \subsection{Hardware}
+    \textbf{Laptop Specifications} \newline \newline
     Dell G7\newline
     \emph{Intel Core i7, 16 GB RAM}
     
     \subsection{Software}
     \begin{enumerate}
-        \item \textbf{Git SCM} \newline
-        Git is a distributed version-control system for tracking changes in any set of files, originally designed for coordinating work among programmers cooperating on source code during software development. Its goals include speed, data integrity, and support for distributed, non-linear workflows (thousands of parallel branches running on different systems).
-        \item \textbf{GitHub} \newline
-        GitHub is a provider of Internet hosting for software development and version control using Git. It offers the distributed version control and source code management (SCM) functionality of Git, plus its own features. It provides access control and several collaboration features such as bug tracking, feature requests, task management, continuous integration and wikis for every project.
-        \item \textbf{Google Cloud Platform} \newline
-        Google Cloud Platform (GCP), offered by Google, is a suite of cloud computing services that runs on the same infrastructure that Google uses internally for its end-user products, such as Google Search, Gmail, file storage, and YouTube.
-        \item \textbf{Gunicorn} \newline
-        "Green Unicorn" is a Python Web Server Gateway Interface (WSGI) HTTP server. It is a pre-fork worker model, ported from Ruby's Unicorn project. The Gunicorn server is broadly compatible with a number of web frameworks, simply implemented, light on server resources and fairly fast.
+        \item \textbf{Python} \newline
+        \item \textbf{MySQL} \newline
+        \item \textbf{Django} \newline
         \item \textbf{Visual Studio Code} \newline
-        It is a free source-code editor made by Microsoft for Windows, Linux and macOS. Features include support for debugging, syntax highlighting, intelligent code completion, snippets, code refactoring, and embedded Git.
         \item \textbf{PyCharm Community Edition} \newline
-        PyCharm is an integrated development environment (IDE) used in computer programming, specifically for the Python language. It is developed by the Czech company JetBrains.
+        \item \textbf{HTML} \newline
+        \item \textbf{JavaScript} \newline
+        \item \textbf{TailwindCSS} \newline
+        \item \textbf{Git SCM} \newline
+        \item \textbf{GitHub} \newline
+        \item \textbf{Google Cloud Platform} \newline
+        \item \textbf{Gunicorn} \newline
         \item \textbf{\LaTeX} \newline
-        This project report was made using \LaTeX. \LaTeX is a high-quality typesetting system; it includes features designed for the production of technical and scientific documentation. \LaTeX is the de facto standard for the communication and publication of scientific documents.
         \item \textbf{Adobe Photoshop} \newline
-        Adobe Photoshop is a raster graphics editor developed and published by Adobe Inc. for Windows and macOS.
+        
     \end{enumerate}
     
     
@@ -216,7 +216,7 @@ x % add only one name here
   \section{About the Project}
   The aim of the project, Sudoku Webapp, is to provide an aesthetically rich interface for sudoku enthusiasts to enjoy sudoku puzzles.\newline
 
-  A website with 3 webpages: home page, sudoku page and leaderboard page, is the frontend of the project with which the user interacts. The webpages are made using Django, HTML, JavaScript and a CSS framework called Tailwind. A MySQL database is the primary data store, and is used to store the leaderboard data, and the sudoku game boards that are served on the site.\newline
+  A website with 3 webpages - home page, sudoku page and leaderboard page - is the frontend of the project with which the user interacts. The entire backend is handled using python and the django framework. The sudoku game boards are generated using a combination of custom classes and functions as well as functions from the random module in python. These game boards are passed onto the website using queues. A MySQL database is the primary data store which is used to store the leaderboard data, and the sudoku game boards that are served onto the site. The webpages are made using HTML, JavaScript and a CSS framework called TailwindCSS. \newline
 
   A personal aim with this project was to see how much we, as a team, could push ourselves to make a good, functional service. It challenged our creativity, programming skills and our ability to work and co-operate as a team. This project was a great learning experience.
 
@@ -641,14 +641,14 @@ class _Box:
                 return element
             count += 1
 
-    def __setitem__(self, index: int, val: typing.Union[int, None]):  # noqa: ANN204
+    def __setitem__(self, index: int, val: typing.Optional[int]=None):  # noqa: ANN204
         count = 0  # assignment at a specific index.
         for element_place in range(9):
             if count == element_place:
                 self[element_place].set_value(val)
             count += 1
 
-    def __contains__(self, val: typing.Union[int, None]) -> bool:  # functionality -> val in box
+    def __contains__(self, val: typing.Optional[int]=None) -> bool:  # functionality -> val in box
         for element in self:  # returns True or False.
             if element.get_value() == val:
                 return True
@@ -666,7 +666,7 @@ class _Element:
         return self._value
 
     # setter methods.
-    def set_value(self, value: typing.Union[int, None]) -> None:  # To access the value this element will have.
+    def set_value(self, value: typing.Optional[int]=None) -> None:  # To access the value this element will have.
         self._value = value
 
 
