--- a/latex-report/main.tex
+++ b/latex-report/main.tex
@@ -216,7 +216,7 @@ x % add only one name here
   \section{About the Project}
   The aim of the project, Sudoku Webapp, is to provide an aesthetically rich interface for sudoku enthusiasts to enjoy sudoku puzzles.\newline
 
-  A website with 3 webpages - home page, sudoku page and leaderboard page - is the frontend of the project with which the user interacts. The entire backend is handled using python and the django framework. The sudoku game boards are generated using a combination of custom classes and functions as well as functions from the random module in python. These game boards are passed onto the website using queues. A MySQL database is the primary data store which is used to store the leaderboard data, and the sudoku game boards that are served onto the site. The webpages are made using HTML, JavaScript and a CSS framework called TailwindCSS. \newline
+  A website with 3 webpages - home page, sudoku page and leaderboard page - is the frontend of the project with which the user interacts. The entire backend is handled using Python and the Django framework. The sudoku game boards are generated using a combination of custom classes and functions as well as functions from the random module in Python. These game boards are passed onto the website using queues. A MySQL database is the primary data store which is used to store the leaderboard data, and the sudoku game boards that are served onto the site. The webpages are made using HTML, JavaScript and a CSS framework called TailwindCSS. \newline
 
   A personal aim with this project was to see how much we, as a team, could push ourselves to make a good, functional service. It challenged our creativity, programming skills and our ability to work and co-operate as a team. This project was a great learning experience.
 
@@ -641,14 +641,14 @@ class _Box:
                 return element
             count += 1
 
-    def __setitem__(self, index: int, val: typing.Optional[int]=None):  # noqa: ANN204
+    def __setitem__(self, index: int, val: typing.Optional[int] = None):  # noqa: ANN204
         count = 0  # assignment at a specific index.
         for element_place in range(9):
             if count == element_place:
                 self[element_place].set_value(val)
             count += 1
 
-    def __contains__(self, val: typing.Optional[int]=None) -> bool:  # functionality -> val in box
+    def __contains__(self, val: typing.Optional[int] = None) -> bool:  # functionality -> val in box
         for element in self:  # returns True or False.
             if element.get_value() == val:
                 return True
@@ -658,7 +658,7 @@ class _Box:
 class _Element:
     """ A class that acts as the element(number) in one of the boxes of sudoku. """
 
-    def __init__(self, value: typing.Optional[int]=None):   # noqa: ANN204
+    def __init__(self, value: typing.Optional[int] = None):   # noqa: ANN204
         self._value = value  # The value the element has.
 
     # getter methods.
@@ -666,7 +666,7 @@ class _Element:
         return self._value
 
     # setter methods.
-    def set_value(self, value: typing.Optional[int]=None) -> None:  # To access the value this element will have.
+    def set_value(self, value: typing.Optional[int] = None) -> None:  # To access the value this element will have.
         self._value = value
 
 
